Bug #889075 arm64: dts: add dts node for touchscreen
[root cause ] need to add adaptive-ts for k4.14
[changes ] add adaptive-ts for k4.14
[side effects] no side effects
[self test ]: yes
[download normally]: yes
[power on/off normally]: yes
[do common repository/branch inspection]: yes
[is there dependence]: no
[confirm dependent commit]: no
[board]: SharkL5
[test case]: N/A
[reviewers ] Joseph Cai
[change_type ] bringup --> sprd_chip_support
[tag_product ] specific

Change-Id: I79b416cffc6fedad12c461e2e8984a7c38862774
Signed-off-by: neo.hou <neo.hou@unisoc.com>

--- a/arch/arm64/boot/dts/sprd/ums510-haps.dts
+++ b/arch/arm64/boot/dts/sprd/ums510-haps.dts
@@ -71,3 +71,21 @@
 &uart1 {
 	status = "okay";
 };
+
+&i2c3 {
+	status = "okay";
+
+	adaptive-touchscreen@38 {
+		compatible = "adaptive-touchscreen";
+		reg = <0x38>;
+		gpios = <&ap_gpio 145 GPIO_ACTIVE_HIGH
+			&ap_gpio 144 GPIO_ACTIVE_HIGH>;
+		controller = "focaltech,FT5436";
+		virtualkeys = <580 60 1320 60 45
+			172 360 1320 60 45
+			158 600 1320 60 45>;
+		private-data {
+			a8 = /bits/ 8 <0x5a>;
+		};
+	};
+};
