Bug #892898 arm64: dts: add sprd display dts node for sharkl3
[root cause  ] sprd drm driver bringup for kernel4.14
[changes     ] dts
[side effects] none
[self test   ]:
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:yes
[is there dependence]:no
[confirm dependent commit]:no
[board]:sp9863a-1h10
[test case]: boot animation display ok
[reviewers   ] chen.he orson.zhai baolin.wang
[change_type ] bringup --> sprd_chip_support
[tag_product ] common

Add sprd display node for sharkl3 drm driver.

Change-Id: Ic8620946de1e60e3ccff913f0b692c8876412fa2
Signed-off-by: Leon He <leon.he@spreadtrum.com>

--- a/arch/arm64/boot/dts/sprd/sc9863a.dtsi
+++ b/arch/arm64/boot/dts/sprd/sc9863a.dtsi
@@ -568,3 +568,25 @@
 		};
 	};
 };
+
+/*&dpu {
+	sprd,dpi-clk-src = <153600000>;
+	clock-names = "clk_src_128m",
+			"clk_src_153m6",
+			"clk_src_384m",
+			"clk_dpu_core",
+			"clk_dpu_dpi",
+			"clk_aon_apb_disp_eb";
+
+	clocks = <&clk_twpll_128m>,
+		<&clk_twpll_153m6>,
+		<&clk_twpll_384m>,
+		<&clk_dpu>,
+		<&clk_dpu_dpi>,
+		<&clk_aon_top_gates 2>;
+};
+
+&dsi {
+	clock-names = "clk_aon_apb_disp_eb";
+	clocks = <&clk_aon_top_gates 2>;
+};*/
