--- a/arch/arm64/boot/dts/sprd/sharkl5.dtsi
+++ b/arch/arm64/boot/dts/sprd/sharkl5.dtsi
@@ -44,8 +44,8 @@
 
 		ap-apb {
 			compatible = "simple-bus";
-			#address-cells = <2>;
-			#size-cells = <2>;
+			#address-cells = <1>;
+			#size-cells = <1>;
 			ranges = <0 0x0 0x70000000 0x10000000>;
 
 			uart0: serial@0 {
@@ -128,13 +128,13 @@
 
 		ap-ahb {
 			compatible = "simple-bus";
-			#address-cells = <2>;
-			#size-cells = <2>;
-			ranges;
+			#address-cells = <1>;
+			#size-cells = <1>;
+			ranges = <0 0x0 0x20000000 0x10000000>;
 
 			ap_dma: dma-controller@20000000 {
 				compatible = "sprd,sharkl5-dma";
-				reg = <0 0x20000000 0 0x4000>;
+				reg = <0x0 0x4000>;
 				interrupts = <GIC_SPI 24 IRQ_TYPE_LEVEL_HIGH>;
 				#dma-cells = <1>;
 				#dma-channels = <32>;
