Bug #896404 input: keyboard: add sprd keypad driver
[root cause  ] no sprd keypad driver in kernel4.14
[changes     ] add sprd keypad driver
[side effects] no
[self test   ]: build ok
[download normally]: no board
[power on/off normally]: no board
[do common repository/branch inspection]: yes
[is there dependence]: yes
[confirm dependent commit]: yes
[board]: common
[test case]: no
[reviewers   ] Baolin.Wang
[change_type ] bringup --> sprd_chip_support
[tag_product ] common

Change-Id: I6ae7540a970950b4d0cd82edc352d9fc86f7af79
Signed-off-by: neo.hou <neo.hou@unisoc.com>

--- a/arch/arm64/configs/sprd_sharkl5_defconfig
+++ b/arch/arm64/configs/sprd_sharkl5_defconfig
@@ -1316,6 +1316,7 @@ CONFIG_KEYBOARD_GPIO=y
 # CONFIG_KEYBOARD_XTKBD is not set
 # CONFIG_KEYBOARD_CAP11XX is not set
 # CONFIG_KEYBOARD_BCM is not set
+# CONFIG_KEYBOARD_SPRD is not set
 # CONFIG_INPUT_MOUSE is not set
 CONFIG_INPUT_JOYSTICK=y
 # CONFIG_JOYSTICK_ANALOG is not set
