--- a/arch/arm64/configs/sprd_minimum_defconfig
+++ b/arch/arm64/configs/sprd_minimum_defconfig
@@ -1076,6 +1076,7 @@ CONFIG_KEYBOARD_ATKBD=y
 # CONFIG_KEYBOARD_OMAP4 is not set
 # CONFIG_KEYBOARD_XTKBD is not set
 # CONFIG_KEYBOARD_BCM is not set
+# CONFIG_KEYBOARD_SPRD is not set
 CONFIG_INPUT_MOUSE=y
 CONFIG_MOUSE_PS2=y
 CONFIG_MOUSE_PS2_ALPS=y
