Bug #871013 ANDROID: usb: gadget: Add function of mtp/ptp
[root cause  ] Add mtp/ptp
[changes     ] 	arch/arm64/configs/sprd_all_defconfig
		arch/arm64/configs/sprd_sharkl5_defconfig
		drivers/usb/gadget/Kconfig
		drivers/usb/gadget/function/Makefile
		drivers/usb/gadget/function/f_mtp.c
		drivers/usb/gadget/function/f_mtp.h
		drivers/usb/gadget/function/f_ptp.c
		include/linux/usb/f_mtp.h
		include/uapi/linux/usb/f_mtp.h
[side effects]No
[self test   ]:Yes
[download normally]:Yes
[power on/off normally]:Yes
[do common repository/branch inspection]:Yes
[is there dependence]:No
[confirm dependent commit]:No
[board]:sharkl3
[test case]:usb
[reviewers   ] jiayong.yang
[change_type ] bringup --> sprd_chip_support
[tag_product ] common

Add usb mtp/ptp driver for for kernel4.14.

Original author: Badhri Jagan Sridharan & Mike Lockwood from Android.

Change-Id: I5fe5a5a2c6b958e96162ad7fe08f754935a3cfb2
Signed-off-by: Xiaofeng Yang <xiaofeng.yang@spreadtrum.com>

--- a/arch/arm64/configs/sprd_sharkl5_defconfig
+++ b/arch/arm64/configs/sprd_sharkl5_defconfig
@@ -2229,6 +2229,7 @@ CONFIG_USB_CONFIGFS=y
 # CONFIG_USB_CONFIGFS_MASS_STORAGE is not set
 # CONFIG_USB_CONFIGFS_F_LB_SS is not set
 CONFIG_USB_CONFIGFS_F_FS=y
+# CONFIG_USB_CONFIGFS_F_MTP is not set
 CONFIG_USB_CONFIGFS_F_ACC=y
 CONFIG_USB_CONFIGFS_F_AUDIO_SRC=y
 CONFIG_USB_CONFIGFS_UEVENT=y
