--- a/arch/arm64/configs/sprd_all_defconfig
+++ b/arch/arm64/configs/sprd_all_defconfig
@@ -2788,6 +2788,8 @@ CONFIG_USB_F_MASS_STORAGE=y
 CONFIG_USB_F_FS=y
 CONFIG_USB_F_MIDI=y
 CONFIG_USB_F_HID=y
+CONFIG_USB_F_MTP=y
+CONFIG_USB_F_PTP=y
 CONFIG_USB_F_AUDIO_SRC=y
 CONFIG_USB_F_ACC=y
 CONFIG_USB_CONFIGFS=y
@@ -2802,6 +2804,8 @@ CONFIG_USB_CONFIGFS_OBEX=y
 CONFIG_USB_CONFIGFS_MASS_STORAGE=y
 # CONFIG_USB_CONFIGFS_F_LB_SS is not set
 CONFIG_USB_CONFIGFS_F_FS=y
+CONFIG_USB_CONFIGFS_F_MTP=y
+CONFIG_USB_CONFIGFS_F_PTP=y
 CONFIG_USB_CONFIGFS_F_ACC=y
 CONFIG_USB_CONFIGFS_F_AUDIO_SRC=y
 CONFIG_USB_CONFIGFS_UEVENT=y
