Bug #891870 arm64: dts: add sprd gsp dts node for sharkl3
[root cause  ] sprd drm gsp driver bringup for kernel4.14
[changes     ] dts
[side effects] no
[self test   ]:
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:yes
[is there dependence]:no
[confirm dependent commit]:no
[board]:9863a
[test case]:compiler pass
[reviewers   ] leon.he
[change_type ] bringup --> sprd_chip_support
[tag_product ] common

Add sprd gsp node for sharkl3 drm driver.

Signed-off-by: Chen He <chen.he@spreadtrum.com>
Change-Id: I22a0436a946d288419072cfdc5fa6a298130e832

--- a/arch/arm64/boot/dts/sprd/sp9863a-common.dtsi
+++ b/arch/arm64/boot/dts/sprd/sp9863a-common.dtsi
@@ -34,6 +34,7 @@
 	display-subsystem {
 		compatible = "sprd,display-subsystem";
 		ports = <&dpu_port>;
+		gsp = <&gsp>;
 	};
 
 	ddr_dfs: scene-frequency {
