--- a/arch/arm64/boot/dts/sprd/sc9863a.dtsi
+++ b/arch/arm64/boot/dts/sprd/sc9863a.dtsi
@@ -168,6 +168,15 @@
 				<GIC_SPI 151 IRQ_TYPE_LEVEL_HIGH>;
 	};
 
+	gsp: sprd-gsp {
+		compatible = "sprd,gsp-r6p0-sharkl3";
+		name = "sprd-gsp";
+		core-cnt = <1>;
+		io-cnt = <7>;
+		cores = <&gsp_core0>;
+		/*power-domains = <&disp_pd>;*/
+	};
+
 	soc {
 		pmu_gate: pmu-gate {
 			compatible = "sprd,sc9863a-pmu-gate";
