--- a/arch/arm64/boot/dts/sprd/sharkl3.dtsi
+++ b/arch/arm64/boot/dts/sprd/sharkl3.dtsi
@@ -288,6 +288,15 @@
 				};
 			};
 
+			gsp_core0: gsp@3000000 {
+				compatible = "sprd,gsp-core";
+				reg = <0x3000000 0x2000>;
+				core-id = <0>;
+				kcfg-num = <16>;
+				interrupts = <GIC_SPI 51 IRQ_TYPE_LEVEL_HIGH>;
+				iommus = <&iommu_dispc>;
+			};
+
 			iommu_dispc: iommu@3000000 {
 				compatible = "sprd,iommuexl3-dispc";
 				reg = <0x3000000 0x800>,
