--- a/arch/arm64/boot/dts/sprd/roc1.dtsi
+++ b/arch/arm64/boot/dts/sprd/roc1.dtsi
@@ -43,6 +43,106 @@
 			reg = <0 0x71000000 0 0x100000>;
 		};
 
+		ap-ahb {
+			compatible = "simple-bus";
+			#address-cells = <1>;
+			#size-cells = <1>;
+			ranges = <0 0x0 0x20000000 0x10000000>;
+
+			dpu: dpu@300000 {
+				compatible = "sprd,display-processor";
+				reg = <0x300000 0x1000>;
+				interrupts = <GIC_SPI 27 IRQ_TYPE_LEVEL_HIGH>;
+				status = "disabled";
+
+				dma-coherent;
+
+				sprd,ip = "dpu-r3p0";
+				/* sprd,soc = "roc1"; */
+
+				//sprd,syscon-aon-apb = <&aon_apb_controller>;
+
+				dpu_port: port {
+					dpu_out: endpoint {
+						remote-endpoint = <&dsi_in>;
+					};
+				};
+			};
+
+			iommu_dispc: iommu@300000 {
+				compatible = "sprd,iommuexroc1-dispc";
+				reg = <0x300000 0x800>,
+				      <0x300800 0x80>;
+				iova-base = <0x30000000>;
+				iova-size = <0x10000000>;
+				reg_name = "mmu_interrupt_reg","mmu_reg";
+				status = "disabled";
+				#iommu-cells = <0>;
+			};
+
+			dsi: dsi@400000 {
+				compatible = "sprd,dsi-host";
+				reg = <0x400000 0x1000>;
+				interrupts = <GIC_SPI 30 IRQ_TYPE_LEVEL_HIGH>,
+					<GIC_SPI 31 IRQ_TYPE_LEVEL_HIGH>;
+				status = "disabled";
+
+				sprd,ip = "sprd,dsi-ctrl", "r3p0";
+				sprd,soc = "roc1";
+
+				//sprd,syscon-aon-apb = <&aon_apb_controller>;
+
+				ports {
+					#address-cells = <1>;
+					#size-cells = <0>;
+
+					port@0 {
+						reg = <0>;
+						dsi_out: endpoint {
+							remote-endpoint = <&dphy_in>;
+						};
+					};
+
+					port@1 {
+						reg = <1>;
+						dsi_in: endpoint@1 {
+							remote-endpoint = <&dpu_out>;
+						};
+					};
+				};
+			};
+
+			dphy: dphy {
+				compatible = "sprd,dsi-phy";
+				#address-cells = <1>;
+				#size-cells = <0>;
+				reg = <0x400000 0x1000>;
+				status = "disabled";
+
+				sprd,ip = "sprd,megacores-sharkl5";
+				sprd,soc = "roc1";
+
+				//sprd,syscon-aon-apb = <&aon_apb_controller>;
+
+				/* output port */
+				port@0 {
+					reg = <0>;
+					dphy_out: endpoint {
+						remote-endpoint = <&panel_in>;
+					};
+				};
+
+				/* input port*/
+				port@1 {
+					reg = <1>;
+					dphy_in: endpoint {
+						remote-endpoint = <&dsi_out>;
+					};
+				};
+			};
+
+		};
+
 		ap-apb {
 			compatible = "simple-bus";
 			#address-cells = <1>;
