--- a/arch/arm64/boot/dts/sprd/uc710haps-common.dtsi
+++ b/arch/arm64/boot/dts/sprd/uc710haps-common.dtsi
@@ -6,6 +6,24 @@
  * This file is licensed under a dual GPLv2 or X11 license.
  */
 
+/ {
+	display-subsystem {
+		compatible = "sprd,display-subsystem";
+		ports = <&dpu_port>;
+	};
+
+	reserved-memory {
+		#address-cells = <2>;
+		#size-cells = <2>;
+		ranges;
+
+		fb_reserved: framebuffer@9e000000{
+			reg = <0x0 0x9e000000 0x0 0x1000000>;
+		};
+	};
+
+};
+
 &uart0 {
 	status = "okay";
 };
