--- a/arch/arm64/boot/dts/sprd/ud710-haps.dts
+++ b/arch/arm64/boot/dts/sprd/ud710-haps.dts
@@ -9,6 +9,7 @@
 
 #include "uc710haps.dtsi"
 #include "uc710haps-common.dtsi"
+#include "lcd/lcd_nt35597_boe_mipi_hd.dtsi"
 
 / {
 	model = "Spreadtrum UD710 Haps Board";
@@ -84,5 +85,42 @@
 	sprd,name = "sdio_emmc";
 	no-sdio;
 	no-sd;
+	status = "okay";
+};
+
+&dpu {
+	status = "okay";
+};
+
+&iommu_dispc {
+	status = "okay";
+};
+
+&dsi {
+	status = "okay";
+	#address-cells = <1>;
+	#size-cells = <0>;
+
+	panel {
+		compatible = "sprd,generic-mipi-panel";
+		#address-cells = <1>;
+		#size-cells = <0>;
+		reg = <0>;
+
+		sprd,force-attached = "lcd_nt35597_boe_mipi_hd";
+		port {
+			reg = <1>;
+			panel_in: endpoint {
+				remote-endpoint = <&dphy_out>;
+			};
+		};
+	};
+};
+
+&lcd_nt35597_hd_timing0 {
+	clock-frequency = <6500000>;
+};
+
+&dphy {
 	status = "okay";
 };
