Bug #911884 arm64: configs: enable power domain for sprd dpu
[root cause  ] add power domain support for sprd dpu
[changes     ] defconfig
[side effects]no
[self test   ]:yes
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:yes
[is there dependence]:no
[confirm dependent commit]:no
[board]:sp9863a-1h10/ums510-haps
[test case]:display ok
[reviewers   ] leon.he thomas.chai infi.chen
[change_type ] bringup --> sprd_chip_support
[tag_product ] common

Add power domain support for sprd dpu

Change-Id: I6dcee1f2bbb68055504de16204c5a1a14c027c00
Signed-off-by: Kevin Tang <kevin.tang@spreadtrum.com>

--- a/arch/arm64/configs/sprd_roc1_defconfig
+++ b/arch/arm64/configs/sprd_roc1_defconfig
@@ -2804,6 +2804,7 @@ CONFIG_USB_CONFIGFS_OBEX=y
 CONFIG_USB_CONFIGFS_MASS_STORAGE=y
 # CONFIG_USB_CONFIGFS_F_LB_SS is not set
 CONFIG_USB_CONFIGFS_F_FS=y
+# CONFIG_USB_CONFIGFS_F_MTP is not set
 CONFIG_USB_CONFIGFS_F_ACC=y
 CONFIG_USB_CONFIGFS_F_AUDIO_SRC=y
 CONFIG_USB_CONFIGFS_UEVENT=y
@@ -3280,6 +3281,7 @@ CONFIG_SPRD_CPROC=y
 # SPRD IQ modules
 #
 CONFIG_SPRD_IQ=y
+# CONFIG_DISP_PM_DOMAIN_SHARKL3 is not set
 # CONFIG_SUNXI_SRAM is not set
 # CONFIG_SOC_TI is not set
 CONFIG_PM_DEVFREQ=y
