--- a/arch/arm64/configs/sprd_all_defconfig
+++ b/arch/arm64/configs/sprd_all_defconfig
@@ -567,7 +567,10 @@ CONFIG_PM_DEBUG=y
 CONFIG_PM_SLEEP_DEBUG=y
 CONFIG_PM_OPP=y
 CONFIG_PM_CLK=y
+CONFIG_PM_GENERIC_DOMAINS=y
 # CONFIG_WQ_POWER_EFFICIENT_DEFAULT is not set
+CONFIG_PM_GENERIC_DOMAINS_SLEEP=y
+CONFIG_PM_GENERIC_DOMAINS_OF=y
 CONFIG_CPU_PM=y
 CONFIG_ARCH_HIBERNATION_POSSIBLE=y
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
@@ -3283,6 +3286,7 @@ CONFIG_SPRD_CPROC=y
 # SPRD IQ modules
 #
 CONFIG_SPRD_IQ=y
+CONFIG_DISP_PM_DOMAIN_SHARKL3=y
 # CONFIG_SUNXI_SRAM is not set
 # CONFIG_SOC_TI is not set
 CONFIG_PM_DEVFREQ=y
