--- a/arch/arm64/configs/sprd_minimum_defconfig
+++ b/arch/arm64/configs/sprd_minimum_defconfig
@@ -1581,6 +1581,7 @@ CONFIG_CLKSRC_VERSATILE=y
 # SPRD IQ modules
 #
 # CONFIG_SPRD_IQ is not set
+# CONFIG_DISP_PM_DOMAIN_SHARKL3 is not set
 # CONFIG_SUNXI_SRAM is not set
 # CONFIG_SOC_TI is not set
 # CONFIG_PM_DEVFREQ is not set
