Bug #923359 arm64: configs: roc1: system/vendor/userdata boot from emmc
[root cause  ] system/vendor/userdata boot from emmc
[changes     ] system/vendor/userdata boot from emmc
[side effects] no
[self test   ]: yes
[download normally]: yes
[power on/off normally]: yes
[do common repository/branch inspection]: yes
[is there dependence]: no
[confirm dependent commit]: no
[board]: ud710-haps
[test case]: kernel compile passed
[reviewers   ] nianfu.bai
[change_type ] bringup --> sprd_chip_support
[tag_product ] common

Change the way of system/vendor/userdata partitions boot
from backdoor to emmc.

Conflicts:
	arch/arm64/boot/dts/sprd/uc710haps-common.dtsi

Change-Id: I29db4d97bb7ecc80244f248a3b1e0d6149bb642e
Signed-off-by: Ruifeng Zhang <zhangrf@spreadst.com>

--- a/arch/arm64/boot/dts/sprd/ud710-haps.dts
+++ b/arch/arm64/boot/dts/sprd/ud710-haps.dts
@@ -25,29 +25,18 @@
 
 	memory: memory@80000000 {
 		device_type = "memory";
-		reg = <0x0 0x80000000 0x0 0xc0000000>;
+		reg = <0x0 0x80000000 0x0 0x80000000>;
 	};
 
 	chosen {
 		stdout-path = &uart1;
-		bootargs = "earlycon=sprd_serial,0x70100000,115200n8 console=ttyS1,115200n8 loglevel=8 maxcpus=1 init=/init root=/dev/memdisk.0 rootfstype=ext4 rw rootwait androidboot.hardware=ud710_haps androidboot.selinux=permissive";
+		bootargs = "earlycon=sprd_serial,0x70100000,115200n8 console=ttyS1,115200n8 loglevel=8 maxcpus=1 init=/init root=/dev/mmcblk0p30 rootfstype=ext4 rw rootwait androidboot.hardware=ud710_haps androidboot.selinux=permissive";
 	};
 
 	reserved-memory {
 		#address-cells = <2>;
 		#size-cells = <2>;
 		ranges;
-
-		memdisk_reserved: memdisk@1,00000000{
-			reg = <0x0 0xc0000000 0x0 0x50000000>,	/* system 1280M*/
-				<0x1 0x10000000 0x0 0x20000000>, /* userdata 512M*/
-				<0x1 0x30000000 0x0 0x12c00000>; /* vendor 300M*/
-		};
-	};
-
-	sprd-memdisk {
-		compatible = "sprd,memdisk";
-		memory-region = <&memdisk_reserved>;
 	};
 };
 
