--- a/arch/arm64/boot/dts/sprd/sharkl3.dtsi
+++ b/arch/arm64/boot/dts/sprd/sharkl3.dtsi
@@ -63,6 +63,15 @@
 			reg = <0 0x402b0000 0 0x10000>;
 		};
 
+		disp_pd: power-domain@402b0058 {
+			compatible = "sprd,sharkl3-disp-domain";
+			reg = <0x0 0x402b0058 0x0 0x20>;
+			syscons = <&pmu_regs REG_PMU_APB_PD_DISP_CFG
+				MASK_PMU_APB_PD_DISP_FORCE_SHUTDOWN>;
+			syscon-names = "power";
+			#power-domain-cells = <0>;
+		};
+
 		aon_apb_regs: syscon@402e0000 {
 			compatible = "syscon";
 			#syscon-cells = <2>;
