--- a/arch/arm64/boot/dts/sprd/roc1.dtsi
+++ b/arch/arm64/boot/dts/sprd/roc1.dtsi
@@ -6,6 +6,8 @@
  * This file is licensed under a dual GPLv2 or X11 license.
  */
 
+#include <dt-bindings/soc/sprd,roc1-regs.h>
+#include <dt-bindings/soc/sprd,roc1-mask.h>
 #include <dt-bindings/interrupt-controller/arm-gic.h>
 
 / {
