Revert "Bug #882344 arm64: dts: re-write with new ranges for peripheral buses"
This reverts commit bfcb3b53667d0c7edc1fc59991dbd7a3ebedfeb7.

Revert Reason: After talking with Baolin, I agree with his opinion about
the register offset shall be aligned with SoCs datasheet.

Regardless of whatever the physical bus really is, I do prefer to make
sprd developers life easier.

And this change is only about syntax without real effect to driver
behaviour.

Change-Id: Iee114e03db82b8ded751196deaa4514ee31b6750
Signed-off-by: Orson Zhai <orson.zhai@spreadtrum.com>

--- a/arch/arm64/boot/dts/sprd/roc1.dtsi
+++ b/arch/arm64/boot/dts/sprd/roc1.dtsi
@@ -147,21 +147,21 @@
 
 		ap-apb {
 			compatible = "simple-bus";
-			#address-cells = <1>;
-			#size-cells = <1>;
-			ranges = <0 0 0x70000000 0x10000000>;
+			#address-cells = <2>;
+			#size-cells = <2>;
+			ranges;
 
-			uart0: serial@0 {
+			uart0: serial@70000000 {
 				compatible = "sprd,sc9836-uart";
-				reg = <0x0 0x100>;
+				reg = <0 0x70000000 0 0x100>;
 				interrupts = <GIC_SPI 2 IRQ_TYPE_LEVEL_HIGH>;
 				clocks = <&ext_26m>;
 				status = "disabled";
 			};
 
-			uart1: serial@100000 {
+			uart1: serial@70100000 {
 				compatible = "sprd,sc9836-uart";
-				reg = <0x100000 0x100>;
+				reg = <0 0x70100000 0 0x100>;
 				interrupts = <GIC_SPI 3 IRQ_TYPE_LEVEL_HIGH>;
 				clocks = <&ext_26m>;
 				status = "disabled";
